--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node build/index.js",
     "dev": "nodemon src/index.ts",
+    "seed": "ts-node src/db/seed.ts",
     "build": "rimraf ./build && tsc",
     "build:frontend": "npm run build --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
