--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "seed": "ts-node src/db/seed.ts",
     "build": "rimraf ./build && tsc",
     "build:frontend": "npm run build --prefix frontend",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -24,9 +26,11 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
     "mongoose": "^7.0.0"
   }
 }
